--- a/MainMusicStore.DataAccess/MainMusicStore.DataAccess.csproj
+++ b/MainMusicStore.DataAccess/MainMusicStore.DataAccess.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MainMusicStore.Models\MainMusicStore.Models.csproj" />
+  </ItemGroup>
+
 </Project>
