--- a/MainMusicStore/appsettings.json
+++ b/MainMusicStore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MainMusicStore-58067F9F-C509-45F8-9202-340EAF5444F7;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAPTOP-JKEU5R0B\\SQLEXPRESS;Database=MainMusicStore;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
