--- a/MainMusicStore/MainMusicStore.csproj
+++ b/MainMusicStore/MainMusicStore.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\MainMusicStore.Utility\MainMusicStore.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\products\" />
+  </ItemGroup>
+
 </Project>
