--- a/MainMusicStore/appsettings.json
+++ b/MainMusicStore/appsettings.json
@@ -9,5 +9,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SendGridApiKey": "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",
+   "SendGridUser" :  "MainMusicStore"
 }
